--- a/index.html
+++ b/index.html
@@ -6,12 +6,356 @@
 </head>
 <body>
   <div class="topnav">
-    <a class="active" href="#home">HOME</a>
-    <a href="#news">ABOUT</a>
+    <a class="active" id="homebtn">HOME</a>
+    <a class="aboutbtn">ABOUT</a>
     <a href="#contact">SKILLS</a>
     <a href="#about">PROJECTS</a>
     <a href="#contact">CONTACTS</a>
    </div>
+   <div id="home">
+      <div class="body-ind">
+        <div class="work1">
+          <div class="body-content">
+            <div class="row">
+              <div class="mydiv col-7">
+                <p id="entry">Hi my name is</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="mydiv col-7">
+                <h1 class="display-3 innerind" id="name">derrick wakhu shibero</h1>
+                <h1 class="display-3 innerind">I build this for the web and AI</h1>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="body-content restind">
+          <div class="row">
+            <div class="mydiv col-7">
+              <p>I am a software engineer based in Nairobi Kenya, who focuses on backend web development in technologies like 
+                <span> php, flask and node. </span>
+                I am also interested in data science and machine learning especially using python. Currently I am a student at Kenyatta University currently undertaking my undergraduate degree in Computer Science.
+              </p>
+            </div>
+          </div>
+        </div>
+        <button type="button" class="btn btn-outline-info aboutbtn">
+          <a href="#about">More about ...</a>
+        </button>
+      </div>
+    </div>
+    <div id="about" hidden>
+      <div>
+        <div class="myabout">
+          <div class="about-bg">
+            <div class="body-content">
+              <div class="row">
+                <div class="col-3"></div>
+                <div class="col-7">
+                  <p>Hi am <span class="myname">derrick shibero wakhu.</span> I am currently a student at <span class="myname">kenyatta university.</span> I
+                    am pursuing an undergraduate degree in 
+                    <span class="myname"> Bachelor of Science </span> in <span class="myname">computer science.</span> I have over two years experience working 
+                    and possessing knowledge in different working primarily in backend development, data science and machine learning with python and also in 
+                    android development with java. I am currently in the process of lauching my own blog website which like my youtube channel will help me share 
+                    my knowledge of programming and other related issues.
+                  </p>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-3"></div>
+                <div class="col-7">
+                  <p>Currently I reside in Nairobi, Kenya. In my spare time I like to keep myself busy reading, learning new things experimenting with different 
+                    technologies like linux. I also occassionally play chess even though I am not that much of a pro. I am also interested in artificial 
+                    intelligence and the capabilities it has to change the world.
+                  </p>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-3"></div>
+                <div class="col-7">
+                  <p>I would describe myself as 
+                    <ul>
+                      <li>A team player</li>
+                      <li>A risk taker </li>
+                      <li>A hardworker</li>
+                      <li>Somebody who is ready to listen to others </li>
+                      <li>Somebody who is ready to learn </li>
+                      <li>Somebody who is ready to learn from failures</li>
+                      <li>Somebody who is ready to innovate</li>
+                    </ul>
+                  </p>
+                </div>
+              </div>
+              <div class="text-center">
+                <button type="button" class="btn btn-outline-info skillsbtn">
+                  <a href="#skills">Skills...</a>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+     <div id="skills" hidden>
+      <div class="skills-bg">
+        <div class="body-content">
+          <p>I have skills in the following areas
+            <ul> 
+            <li> python 
+              <ul>
+                <li>data science and machine learning with numpy, pandas and sci-kit learn </li>
+                <li>data visualisation with matplotlib and seaborn</li>
+                <li>web development with flask, fastapi and django </li>
+                <li>database intergration in python with mysql, mongodb and sqlite3</li>
+                <li>graphical user with kivy and tkinter </li>
+                <li>language processing with NLTK and textblob</li>
+                <li>image processing with opencv and pillow</li>
+                <li>webscraping </li>
+              </ul>
+            </li>
+            <li>javascript 
+              <ul>
+                <li>vanilla javascript </li>
+                <li>express js</li>
+                <li>node js</li>
+                <li>JQuery</li>
+              </ul>
+            </li>
+            <li>java 
+              <ul>
+                <li>graphical user interface </li>
+                <li>database intergration with mysql, mongodb and sqlite3</li>
+                <li>android development </li>
+              </ul>
+            </li>
+            <li>php </li>
+            <li>c/c++</li>
+            <li> css 
+              <ul> 
+                li vanilla css 
+                li bootstrap
+              </ul>
+            </li>
+            <li>linux operating system like linux and windows</li>
+            <li>mongodb </li>
+            <li>mysql and sqlite3 </li>
+            <li>microsoft office 
+              <ul>
+                <li>excel spreadsheets</li>
+                <li>microsoft word </li>
+                <li>powerpoint presentation </li>
+                <li>ms publisher  </li>
+              </ul>
+            </li>
+            </ul>
+          </p>
+        </div>
+        <div class="text-center">
+          <button type="button" class="btn btn-outline-info projects">
+            <a href="#projects">More projects</a>
+          </button>
+        </div>
+      </div>
+    </div>
+     <div id="projects" hidden>
+      <div class="first-bg">
+        <div class="body-content">
+          <div class="row">
+            <div class="col-3"></div>
+            <div class="col-7">
+              <p>Over the course of time I have done many small projects which can easily be accessed in 
+                <a class="myproject-a" href="https://github.com/blackwakhu"> github page.</a> Some of the projects I have done include: 
+                <ul >
+                  <li> 
+                      <a class="myproject-a" href="#port">Portfolio website</a>
+                      </li>
+                  <li> 
+                      <a class="myproject-a" href="#python-phonebooke">Python phonebook using mongodb</a>
+                      </li>
+                  <li> 
+                      <a class="myproject-a" href="#cpp-blackjack">C++ Black jack</a>
+                      </li>
+                  <li> 
+                      <a class="myproject-a" href="#cunit">C unit converter</a>
+                      </li>
+                  <li> 
+                      <a class="myproject-a" href="#dictionary">Python dictionary </a>
+                      </li>
+                  <li> 
+                      <a class="myproject-a" href="#phpstudent">Php student registration </a>
+                      </li>
+                  <li> 
+                      <a class="myproject-a" href="#pythoncalculator">Python calculator</a>
+                      </li>
+                  <li> 
+                      <a class="myproject-a" href="#javalib">Java library program </a>
+                      </li>
+                  <li> 
+                      <a class="myproject-a" href="#datascience">Data science in python</a>
+                      </li>
+                </ul>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="second-bg">
+        <div class="row">
+          <div class="col3"></div>
+          <div class="col-7">
+            <h1 class="display-5" id="port">This portfolio website</h1>
+            <p>This is a web application within which this content sits on. I build this app using nodejs and express as the backend 
+                technologies. In the front end I utilised bootstrap which is a CSS framework to style my work. The main use of this 
+                website is to help with the process of marketing and getting close to my clients. It provides a me and my clients a 
+                platform where i can post my material and where they can get to see me and decide my suitability to the tasks. The code 
+                to this site is not public but you can contact me if you wish to have one.
+                <a href="#footer"> Contacts ...</a>
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col3"></div>
+          <div class="col-7">
+            <h1 class="display-5" id="python-phonebooke"> Python phonebook app </h1>
+            <p>This is a small mini-python project which uses python and mongodb to store data. It uses pymongo library to create a link 
+                between python and mongodb. It is though a CLI program but plans are there to add a kivy based interface inorder to interact 
+                with the user. it has some basic functions like adding a contact, checking if the contact exists, deleting a contact etc. The 
+                code is publicly available in my github repository. 
+                <a href="https://github.com/blackwakhu/python-phonebook-mongo"> link>></a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col3"></div>
+          <div class="col-7">
+            <h1 class="display-5" id="cpp-blackjack">C++ Black jack </h1>
+                <p>While this might not be close to the real game, this command line interface card game is among the multiple C++ programs I have developed.
+                    It uses the random function of c++ and also includes the use of some object oriented topics like classes. It also utilizes the use of header 
+                    files to store some of the codes and connect to others. 
+                    <a href="https://github.com/blackwakhu/cpp-black-jack"> link>></a>
+                </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col3"></div>
+          <div class="col-7">
+            <h1 class="display-5" id="cunit">C unit converter </h1>
+                <p>While this application is still a command line interface application, it stills shows some of the knowledge that I have acquired in C programming 
+                    language like  use of header files and macros. This program can do many many conversions including 
+                    <ul> 
+                        <li>currency </li>
+                        <li>volume </li>
+                        <li>weight </li>
+                        <li>temperature </li>
+                        <li>length </li>
+                     </ul>
+                    While some values need to be adjusted like the currency, the rest are within the internation standards. 
+                    <a href="https://github.com/blackwakhu/unit-converter-c"> link >></a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col3"></div>
+          <div class="col-7">
+            <h1 class="display-5" id="dictionary">Python dictionary </h1>
+                <p>In this project I created two one for the command and the other for the web. They both work the same by utilising the textblob library that allows the user 
+                    to find the meanings of words or find the grammaticall transformations in words like the plurals, singulars, spellings etc. The files for the web app 
+                    are sadly not available. But the backend technology used was flask.
+                    <a href="https://github.com/blackwakhu/terminal-dictionary-python"> link >></a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col3"></div>
+          <div class="col-7">
+            <h1 class="display-5" id="phpstudent"> Php student registration </h1>
+                <p>This app was build using php as the backend and sqlite3 as the database. It is a small application that performs some of the basic database CRUD operations. The 
+                    frontend technology I used was bootstrap. In this app the user is entering some details about a student which are inturn being saved in a database. 
+                    <a href="https://github.com/blackwakhu/StudentRegistration-php-sqlite3"> link>></a>
+                </p>
+          </div>
+        </div> 
+        <div class="row">
+          <div class="col3"></div>
+          <div class="col-7">
+            <h1 class="display-5" id="pythoncalculator"> Python calculator</h1>
+                <p> In this application I utilised the use of the kivy library to build my app. It does the operations of a basic calculator like addition, subtraction, multiplication 
+                    and division. 
+                    <a href="https://github.com/blackwakhu/kivy_calculator"> link >></a>
+                </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col3"></div>
+          <div class="col-7-">
+            <h1 class="display-5" id="javalib"> Java library program </h1>
+                <p> In this application, it consists of a java application integrating with a database which is sqlite3. This application is used to perform some CRUD applications like 
+                  add a book, borrow a book, return a book, reserve a book. 
+                    <a href="https://github.com/blackwakhu/libraryjava"> link>> </a>
+                  </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col3"></div>
+          <div class="col-7">
+            <h1 class="display-5" id="datascience"> Data science in python </h1>
+                <p> I have done very many projects for data science and machine learning utilising some of the python libraries like numpy, pandas, seaborn, matplotlib, scikit learn. In all 
+                    I have mostly made them backend and utilised the flask library. some notable ones include 
+                    <ul> 
+                        <li>
+                            <a href="https://github.com/blackwakhu/feedgrains"> Feed grains dataset</a>
+                            </li>
+                        <li> 
+                            <a href="https://github.com/blackwakhu/abalone"> Abalone dataset </a>
+                            </li>
+                        <li>  
+                            <a href="https://github.com/blackwakhu/communities"> Communities dataset </a>
+                            </li>
+                        <li>
+                            <a href="https://github.com/blackwakhu/shuttle-landing-control"> Shuttle landing control dataset</a>
+                            </li>
+                        <li>
+                            <a href="https://github.com/blackwakhu/marketing-campaing"> Marketing campaign dataset</a>
+                            </li>
+                      </ul>
+                  </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="myfooter">
+      <footer>
+        <div class="container text-center" id="footer">
+          <a href="mailto:shiberoderrickwakhu@gmail.com">
+            <img src="images/email light.png" alt="email" class="social-images">
+          </a>
+          <a href="https://github.com/blackwakhu">
+            <img src="images/GitHub-logo.png", alt="github" class="social-images">
+          </a>
+          <a href="">
+            <img src="images/twitter logo light.jpg", alt="x" class="social-images">
+          </a>
+          <a href="https://www.facebook.com/people/Derrick-Shibero/pfbid02wSvbw24XdZcdXhztx8agZCr4pia9KhJtxqu6wEE59eGaTFUUZKN9cQS8o5Wia85Bl/?name=xhp_nt__fb__action__open_user">
+            <img src="images/facebook logo light.jpg", alt="facebook" class="social-images">
+          </a>
+          <a href="">
+            <img src="images/linkedin.jpg", alt="linkedin" class="social-images">
+          </a>
+         <a href="https://wa.me/+254114386583">
+            <img src="images/whatsapp.jpg", alt="whatsapp" class="social-images">
+          </a>
+          <a href="https://www.youtube.com/@blackafrique3789">
+            <img src="images/youtube.jpg", alt="youtube" class="social-images">
+          </a>
+        </div>
+        <div class="row lower">
+          <div class="col"></div>
+          <div class="col text-center">
+            <span class="mycopy text-center">&copy; 2023 This is the property of Derrick Shibero </span>
+          </div>
+          <div class="col text-end">
+            <span class="mycopy text-end">Version 0.0.1</span>
+          </div>
+        </div>
+      </footer>
+    </div>
   <script src="script.js"></script>
   <!-- jQuery code-->
   
